# ontolocy-lib

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pypi.yml
binder/: environment.yml
docs/: .development.md  index.md
docs/ontolocy_parsers/: MitreAttackParser.md
docs/ontology/: ASN.md  ActorType.md  Banner.md  CAPECPattern.md  CPE.md  CPE23.md  CVE.md  CWE.md  Campaign.md  CobaltStrikeBeacon.md  CobaltStrikeWatermark.md  Control.md  ControlValidationTest.md  Country.md  CyberHarm.md  DNSRecord.md  DataOrigin.md  Detection.md  DomainName.md  Exploit.md  Host.md  IPAddress.md  ImplementationGuidance.md  Incident.md  IntrusionSet.md  JarmHash.md  ListeningSocket.md  MACAddress.md  MitreAttackCampaign.md  MitreAttackDataComponent.md  MitreAttackDataSource.md  MitreAttackGroup.md  MitreAttackMatrix.md  MitreAttackMitigation.md  MitreAttackSoftware.md  MitreAttackTactic.md  MitreAttackTechnique.md  NetworkService.md  Organisation.md  Port.md  (+6 more)
examples/: README.md  requirements.txt
examples/notebooks/: mitre-attack-graph.ipynb  ontolocy-cyber-schema.ipynb
src/ontolocy/: __init__.py  cli.py  dataorigin.py  mixin.py  node.py  relationship.py  utils.py
tests/: conftest.py  test_cli.py  test_node.py
tests/test_models/: test_actortype.py  test_asn.py  test_banner.py  test_capecpattern.py  test_control.py  test_controlvalidationtest.py  test_country.py  test_cpe.py  test_cve.py  test_cwe.py  test_exploit.py  (+16 more)
(+83 files in other folders)
