[metadata]
name = ontolocy
version = 0.1.0
author = Ontolocy
description = A Python package for modeling cybersecurity data in a Neo4j graph database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ontolocy/ontolocy-lib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    neontology
    pandas

[options.packages.find]
where = src

[flake8]
max-line-length = 160
exclude = .venv/*
