[metadata]
name = ontolocy
version = 0.7.0
author = Ontolocy
description = A Python package for modeling cybersecurity data in a Neo4j graph database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ontolocy/ontolocy-lib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=2,<3
    neontology>=1.2
    pandas>1,<3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ontolocy = ontolocy.cli:cli

[flake8]
max-line-length = 160

